#415: P2R - refactor auditlog to auditLog & write details and userRoles correctly into AuditlogEntryDTO_V1
